[tool.poetry]
name = "adrf"
version = "0.1.6"
description = "Async support for Django REST framework"
authors = ["Enrico Massa <enrico.massa@gmail.com>"]
keywords = ["async", "django", "rest", "framework", "drf"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/em1208/adrf"
repository = "https://github.com/em1208/adrf"
include = ["LICENSE"]

[tool.poetry.dependencies]
python = ">=3.8"
django = ">=4.1"
djangorestframework = ">=3.14.0"
async-property = ">=0.2.2"

[tool.poetry.dev-dependencies]
pytest = "^8.0.2"
pytest_cov = "^4.1.0"
pytest-django = "^4.8.0"
tox = "^3.28.0"
tox-py = "^1.3.1"
faker = "^24.2.0"
ruff = "^0.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
