[metadata]
license_files = LICENSE

[tool:pytest]
addopts=--tb=short --strict-markers -ra

[flake8]
ignore = E501,W503,W504

[isort]
skip=.tox
atomic=true
multi_line_output=5
extra_standard_library=types
known_third_party=pytest,_pytest,django
known_first_party=rest_framework,tests

[coverage:run]
# NOTE: source is ignored with pytest-cov (but uses the same).
source = .
include = adrf/*,tests/*
branch = 1

[coverage:report]
include = adrf/*,tests/*
exclude_lines =
    pragma: no cover
    raise NotImplementedError
